--- a/README
+++ b/README
@@ -2,10 +2,13 @@
 | dutch-serialkiller-medici |
 -----------------------------
 
+'doelbewust umlegen'
+
+
 # kidnapping
 https://en.wikipedia.org/wiki/Kidnapping
 
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
-2002-2021
+bemoeigurus at work ® 2002-2021
