--- a/README
+++ b/README
@@ -1,6 +1,6 @@
------------------------------
-| dutch-serialkiller-medici |
------------------------------
+-----------------------
+| dutch-murder-factoy |
+-----------------------
 
 'doelbewust umlegen'
 
